--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Teste técnico",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --silent --runInBand",
+    "test:verbose": "jest --verbose --runInBand",
     "lint": "eslint src"
   },
   "keywords": [],
