--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "teste-tecnico",
   "version": "1.0.0",
   "description": "Teste técnico",
-  "main": "index.js",
+  "main": "dist/main/server.js",
   "scripts": {
+    "build": "npx tsc",
+    "start": "node .",
     "test": "jest --silent --runInBand",
     "test:verbose": "jest --verbose --runInBand",
     "lint": "eslint src"
@@ -12,6 +14,7 @@
   "author": "Yury Stolarz",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
@@ -21,5 +24,10 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
+  },
+  "dependencies": {
+    "express": "^4.18.3",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^7.1.0"
   }
 }
