--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0"
   }
 }
