--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
